--- a/firebase.json
+++ b/firebase.json
@@ -2,15 +2,19 @@
   "database": {
     "rules": "database.rules.json"
   },
-  "emulators": {
-    "functions": {
-      "port": 5001
-    },
-    "database": {
-      "port": 9000
-    },
-    "ui": {
-      "enabled": true
-    }
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [ {
+      "source": "**",
+      "destination": "/index.html"
+    } ]
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
